package ar.edu.utn.frba.dds.fuentedinamica.models.domain.solicitudes;

public enum PosibleEstado {
  PENDIENTE,
  CONFIRMADA,
  CONFIRMADA_SUGERENCIA,
  RECHAZADA
}
